tests/ui/nefeli/types/union/union-types-copy-2.stderr
error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/union-types-copy-2.rs:5:9
   |
LL |         x: String,
   |         ^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |         x: std::mem::ManuallyDrop<String>,
   |            +++++++++++++++++++++++      +

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> $DIR/union-types-copy-2.rs:10:9
   |
LL |         x: T,
   |         ^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
LL |         x: std::mem::ManuallyDrop<T>,
   |            +++++++++++++++++++++++ +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0740`.
